@@ -1,5 +1,6 @@
 2010-10-10  Steffen Kamper  <steffen@typo3.org>
 
+	* Added feature #14658: Feature: internal links with parameters outside the RTE (headlines, images ...)
 	* Fixed bug #15828: Enhance the ExtDirect debugging feature (Thanks to Stefan Galinski)
 	* Fixed bug #15865 clickmenu breaks if no record set. (Thanks to Bjoern Pedersen)
 	* Fixed bug #15230: Bug/Feature: Core only is able to load one specific IE6 CSS file (Thanks to Steffen Ritter)
